c_parser.output
Terminals unused in grammar

    AUTO
    CASE
    DEFAULT
    EXTERN
    INLINE
    REGISTER
    STATIC
    TYPEDEF
    UNION


Rules useless in parser due to conflicts

   40 abstract_declarator_opt: ε


State 124 conflicts: 1 reduce/reduce
State 173 conflicts: 2 reduce/reduce
State 250 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: external_declaration_list

    2 external_declaration_list: external_declaration_list external_declaration
    3                          | external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement

    7 declaration_specifiers: type_specifier
    8                       | type_specifier declaration_specifiers

    9 type_specifier: VOID
   10               | CHAR
   11               | SHORT
   12               | INT
   13               | LONG
   14               | FLOAT
   15               | DOUBLE
   16               | SIGNED
   17               | UNSIGNED
   18               | BOOL
   19               | COMPLEX
   20               | IMAGINARY
   21               | STRUCT IDENTIFIER
   22               | ENUM IDENTIFIER

   23 declarator: pointer_opt direct_declarator

   24 pointer_opt: ε
   25            | STAR pointer_opt

   26 direct_declarator: IDENTIFIER
   27                  | LPAREN declarator RPAREN
   28                  | direct_declarator LPAREN parameter_type_list RPAREN
   29                  | direct_declarator LPAREN RPAREN
   30                  | direct_declarator LBRACKET assignment_expression RBRACKET
   31                  | direct_declarator LBRACKET RBRACKET

   32 parameter_type_list: parameter_list
   33                    | parameter_list COMMA ELLIPSIS

   34 parameter_list: parameter_declaration
   35               | parameter_list COMMA parameter_declaration

   36 parameter_declaration: declaration_specifiers declarator
   37                      | declaration_specifiers abstract_declarator_opt

   38 abstract_declarator: pointer_opt direct_abstract_declarator
   39                    | pointer_opt

   40 abstract_declarator_opt: ε
   41                        | abstract_declarator

   42 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
   43                           | direct_abstract_declarator LPAREN parameter_type_list RPAREN
   44                           | direct_abstract_declarator LPAREN RPAREN
   45                           | direct_abstract_declarator LBRACKET assignment_expression RBRACKET
   46                           | direct_abstract_declarator LBRACKET RBRACKET

   47 declaration: declaration_specifiers init_declarator_list SEMICOLON

   48 init_declarator_list: init_declarator
   49                     | init_declarator_list COMMA init_declarator

   50 init_declarator: declarator
   51                | declarator ASSIGN initializer

   52 initializer: assignment_expression
   53            | LBRACE initializer_list RBRACE
   54            | LBRACE initializer_list COMMA RBRACE

   55 initializer_list: initializer
   56                 | initializer_list COMMA initializer

   57 statement: compound_statement
   58          | expression_statement
   59          | selection_statement
   60          | iteration_statement
   61          | jump_statement

   62 compound_statement: LBRACE block_item_list RBRACE
   63                   | LBRACE RBRACE

   64 block_item_list: block_item_list block_item
   65                | block_item

   66 block_item: declaration
   67           | statement

   68 expression_statement: expression SEMICOLON
   69                     | SEMICOLON

   70 selection_statement: IF LPAREN expression RPAREN statement
   71                    | IF LPAREN expression RPAREN statement ELSE statement
   72                    | SWITCH LPAREN expression RPAREN statement

   73 iteration_statement: WHILE LPAREN expression RPAREN statement
   74                    | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   75                    | FOR LPAREN expression_statement expression_statement RPAREN statement
   76                    | FOR LPAREN expression_statement expression_statement expression RPAREN statement

   77 jump_statement: GOTO IDENTIFIER SEMICOLON
   78               | CONTINUE SEMICOLON
   79               | BREAK SEMICOLON
   80               | RETURN expression SEMICOLON
   81               | RETURN SEMICOLON

   82 expression: assignment_expression
   83           | expression COMMA assignment_expression

   84 assignment_expression: conditional_expression
   85                      | unary_expression assignment_operator assignment_expression

   86 assignment_operator: ASSIGN
   87                    | MUL_ASSIGN
   88                    | DIV_ASSIGN
   89                    | MOD_ASSIGN
   90                    | ADD_ASSIGN
   91                    | SUB_ASSIGN
   92                    | LEFT_ASSIGN
   93                    | RIGHT_ASSIGN
   94                    | AND_ASSIGN
   95                    | XOR_ASSIGN
   96                    | OR_ASSIGN

   97 conditional_expression: logical_or_expression
   98                       | logical_or_expression QUESTION expression COLON conditional_expression

   99 logical_or_expression: logical_and_expression
  100                      | logical_or_expression OR_OP logical_and_expression

  101 logical_and_expression: inclusive_or_expression
  102                       | logical_and_expression AND_OP inclusive_or_expression

  103 inclusive_or_expression: exclusive_or_expression
  104                        | inclusive_or_expression PIPE exclusive_or_expression

  105 exclusive_or_expression: and_expression
  106                        | exclusive_or_expression CARET and_expression

  107 and_expression: equality_expression
  108               | and_expression AMPERSAND equality_expression

  109 equality_expression: relational_expression
  110                    | equality_expression EQ_OP relational_expression
  111                    | equality_expression NE_OP relational_expression

  112 relational_expression: shift_expression
  113                      | relational_expression LT shift_expression
  114                      | relational_expression GT shift_expression
  115                      | relational_expression LE_OP shift_expression
  116                      | relational_expression GE_OP shift_expression

  117 shift_expression: additive_expression
  118                 | shift_expression LEFT_OP additive_expression
  119                 | shift_expression RIGHT_OP additive_expression

  120 additive_expression: multiplicative_expression
  121                    | additive_expression PLUS multiplicative_expression
  122                    | additive_expression MINUS multiplicative_expression

  123 multiplicative_expression: cast_expression
  124                          | multiplicative_expression STAR cast_expression
  125                          | multiplicative_expression SLASH cast_expression
  126                          | multiplicative_expression PERCENT cast_expression

  127 cast_expression: unary_expression
  128                | LPAREN type_name RPAREN cast_expression

  129 unary_expression: postfix_expression
  130                 | INC_OP unary_expression
  131                 | DEC_OP unary_expression
  132                 | unary_operator cast_expression
  133                 | SIZEOF unary_expression
  134                 | SIZEOF LPAREN type_name RPAREN

  135 unary_operator: AMPERSAND
  136               | STAR
  137               | PLUS
  138               | MINUS
  139               | TILDE
  140               | EXCLAMATION

  141 postfix_expression: primary_expression
  142                   | postfix_expression LBRACKET expression RBRACKET
  143                   | postfix_expression LPAREN RPAREN
  144                   | postfix_expression LPAREN argument_expression_list RPAREN
  145                   | postfix_expression DOT IDENTIFIER
  146                   | postfix_expression PTR_OP IDENTIFIER
  147                   | postfix_expression INC_OP
  148                   | postfix_expression DEC_OP

  149 primary_expression: IDENTIFIER
  150                   | INTEGER_CONSTANT
  151                   | FLOATING_CONSTANT
  152                   | CHARACTER_CONSTANT
  153                   | STRING_LITERAL
  154                   | LPAREN expression RPAREN

  155 argument_expression_list: assignment_expression
  156                         | argument_expression_list COMMA assignment_expression

  157 type_name: specifier_qualifier_list abstract_declarator_opt

  158 specifier_qualifier_list: type_specifier specifier_qualifier_list
  159                         | type_specifier
  160                         | type_qualifier specifier_qualifier_list
  161                         | type_qualifier

  162 type_qualifier: CONST
  163               | RESTRICT
  164               | VOLATILE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258)
    BREAK (259) 79
    CASE (260)
    CHAR (261) 10
    CONST (262) 162
    CONTINUE (263) 78
    DEFAULT (264)
    DO (265) 74
    DOUBLE (266) 15
    ELSE (267) 71
    ENUM (268) 22
    EXTERN (269)
    FLOAT (270) 14
    FOR (271) 75 76
    GOTO (272) 77
    IF (273) 70 71
    INLINE (274)
    INT (275) 12
    LONG (276) 13
    REGISTER (277)
    RESTRICT (278) 163
    RETURN (279) 80 81
    SHORT (280) 11
    SIGNED (281) 16
    SIZEOF (282) 133 134
    STATIC (283)
    STRUCT (284) 21
    SWITCH (285) 72
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 17
    VOID (289) 9
    VOLATILE (290) 164
    WHILE (291) 73 74
    BOOL (292) 18
    COMPLEX (293) 19
    IMAGINARY (294) 20
    IDENTIFIER <string_val> (295) 21 22 26 77 145 146 149
    INTEGER_CONSTANT <int_val> (296) 150
    FLOATING_CONSTANT <float_val> (297) 151
    CHARACTER_CONSTANT <string_val> (298) 152
    STRING_LITERAL <string_val> (299) 153
    ELLIPSIS (300) 33
    RIGHT_ASSIGN (301) 93
    LEFT_ASSIGN (302) 92
    ADD_ASSIGN (303) 90
    SUB_ASSIGN (304) 91
    MUL_ASSIGN (305) 87
    DIV_ASSIGN (306) 88
    MOD_ASSIGN (307) 89
    AND_ASSIGN (308) 94
    XOR_ASSIGN (309) 95
    OR_ASSIGN (310) 96
    RIGHT_OP (311) 119
    LEFT_OP (312) 118
    INC_OP (313) 130 147
    DEC_OP (314) 131 148
    PTR_OP (315) 146
    AND_OP (316) 102
    OR_OP (317) 100
    LE_OP (318) 115
    GE_OP (319) 116
    EQ_OP (320) 110
    NE_OP (321) 111
    SEMICOLON (322) 47 68 69 74 77 78 79 80 81
    LBRACE (323) 53 54 62 63
    RBRACE (324) 53 54 62 63
    COMMA (325) 33 35 49 54 56 83 156
    COLON (326) 98
    ASSIGN (327) 51 86
    LPAREN (328) 27 28 29 42 43 44 70 71 72 73 74 75 76 128 134 143 144 154
    RPAREN (329) 27 28 29 42 43 44 70 71 72 73 74 75 76 128 134 143 144 154
    LBRACKET (330) 30 31 45 46 142
    RBRACKET (331) 30 31 45 46 142
    DOT (332) 145
    AMPERSAND (333) 108 135
    EXCLAMATION (334) 140
    TILDE (335) 139
    MINUS (336) 122 138
    PLUS (337) 121 137
    STAR (338) 25 124 136
    SLASH (339) 125
    PERCENT (340) 126
    LT (341) 113
    GT (342) 114
    CARET (343) 106
    PIPE (344) 104
    QUESTION (345) 98


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    program (92)
        on left: 1
        on right: 0
    external_declaration_list (93)
        on left: 2 3
        on right: 1 2
    external_declaration (94)
        on left: 4 5
        on right: 2 3
    function_definition (95)
        on left: 6
        on right: 4
    declaration_specifiers (96)
        on left: 7 8
        on right: 6 8 36 37 47
    type_specifier (97)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 7 8 158 159
    declarator (98)
        on left: 23
        on right: 6 27 36 50 51
    pointer_opt (99)
        on left: 24 25
        on right: 23 25 38 39
    direct_declarator (100)
        on left: 26 27 28 29 30 31
        on right: 23 28 29 30 31
    parameter_type_list (101)
        on left: 32 33
        on right: 28 43
    parameter_list (102)
        on left: 34 35
        on right: 32 33 35
    parameter_declaration (103)
        on left: 36 37
        on right: 34 35
    abstract_declarator (104)
        on left: 38 39
        on right: 41 42
    abstract_declarator_opt (105)
        on left: 40 41
        on right: 37 157
    direct_abstract_declarator (106)
        on left: 42 43 44 45 46
        on right: 38 43 44 45 46
    declaration (107)
        on left: 47
        on right: 5 66
    init_declarator_list (108)
        on left: 48 49
        on right: 47 49
    init_declarator (109)
        on left: 50 51
        on right: 48 49
    initializer (110)
        on left: 52 53 54
        on right: 51 55 56
    initializer_list (111)
        on left: 55 56
        on right: 53 54 56
    statement (112)
        on left: 57 58 59 60 61
        on right: 67 70 71 72 73 74 75 76
    compound_statement (113)
        on left: 62 63
        on right: 6 57
    block_item_list (114)
        on left: 64 65
        on right: 62 64
    block_item (115)
        on left: 66 67
        on right: 64 65
    expression_statement (116)
        on left: 68 69
        on right: 58 75 76
    selection_statement (117)
        on left: 70 71 72
        on right: 59
    iteration_statement (118)
        on left: 73 74 75 76
        on right: 60
    jump_statement (119)
        on left: 77 78 79 80 81
        on right: 61
    expression (120)
        on left: 82 83
        on right: 68 70 71 72 73 74 76 80 83 98 142 154
    assignment_expression (121)
        on left: 84 85
        on right: 30 45 52 82 83 85 155 156
    assignment_operator (122)
        on left: 86 87 88 89 90 91 92 93 94 95 96
        on right: 85
    conditional_expression (123)
        on left: 97 98
        on right: 84 98
    logical_or_expression (124)
        on left: 99 100
        on right: 97 98 100
    logical_and_expression (125)
        on left: 101 102
        on right: 99 100 102
    inclusive_or_expression (126)
        on left: 103 104
        on right: 101 102 104
    exclusive_or_expression (127)
        on left: 105 106
        on right: 103 104 106
    and_expression (128)
        on left: 107 108
        on right: 105 106 108
    equality_expression (129)
        on left: 109 110 111
        on right: 107 108 110 111
    relational_expression (130)
        on left: 112 113 114 115 116
        on right: 109 110 111 113 114 115 116
    shift_expression (131)
        on left: 117 118 119
        on right: 112 113 114 115 116 118 119
    additive_expression (132)
        on left: 120 121 122
        on right: 117 118 119 121 122
    multiplicative_expression (133)
        on left: 123 124 125 126
        on right: 120 121 122 124 125 126
    cast_expression (134)
        on left: 127 128
        on right: 123 124 125 126 128 132
    unary_expression (135)
        on left: 129 130 131 132 133 134
        on right: 85 127 130 131 133
    unary_operator (136)
        on left: 135 136 137 138 139 140
        on right: 132
    postfix_expression (137)
        on left: 141 142 143 144 145 146 147 148
        on right: 129 142 143 144 145 146 147 148
    primary_expression (138)
        on left: 149 150 151 152 153 154
        on right: 141
    argument_expression_list (139)
        on left: 155 156
        on right: 144 156
    type_name (140)
        on left: 157
        on right: 128 134
    specifier_qualifier_list (141)
        on left: 158 159 160 161
        on right: 157 158 160
    type_qualifier (142)
        on left: 162 163 164
        on right: 160 161


State 0

    0 $accept: • program $end

    CHAR       shift, and go to state 1
    DOUBLE     shift, and go to state 2
    ENUM       shift, and go to state 3
    FLOAT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    SHORT      shift, and go to state 7
    SIGNED     shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNSIGNED   shift, and go to state 10
    VOID       shift, and go to state 11
    BOOL       shift, and go to state 12
    COMPLEX    shift, and go to state 13
    IMAGINARY  shift, and go to state 14

    program                    go to state 15
    external_declaration_list  go to state 16
    external_declaration       go to state 17
    function_definition        go to state 18
    declaration_specifiers     go to state 19
    type_specifier             go to state 20
    declaration                go to state 21


State 1

   10 type_specifier: CHAR •

    $default  reduce using rule 10 (type_specifier)


State 2

   15 type_specifier: DOUBLE •

    $default  reduce using rule 15 (type_specifier)


State 3

   22 type_specifier: ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 22


State 4

   14 type_specifier: FLOAT •

    $default  reduce using rule 14 (type_specifier)


State 5

   12 type_specifier: INT •

    $default  reduce using rule 12 (type_specifier)


State 6

   13 type_specifier: LONG •

    $default  reduce using rule 13 (type_specifier)


State 7

   11 type_specifier: SHORT •

    $default  reduce using rule 11 (type_specifier)


State 8

   16 type_specifier: SIGNED •

    $default  reduce using rule 16 (type_specifier)


State 9

   21 type_specifier: STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 23


State 10

   17 type_specifier: UNSIGNED •

    $default  reduce using rule 17 (type_specifier)


State 11

    9 type_specifier: VOID •

    $default  reduce using rule 9 (type_specifier)


State 12

   18 type_specifier: BOOL •

    $default  reduce using rule 18 (type_specifier)


State 13

   19 type_specifier: COMPLEX •

    $default  reduce using rule 19 (type_specifier)


State 14

   20 type_specifier: IMAGINARY •

    $default  reduce using rule 20 (type_specifier)


State 15

    0 $accept: program • $end

    $end  shift, and go to state 24


State 16

    1 program: external_declaration_list •
    2 external_declaration_list: external_declaration_list • external_declaration

    CHAR       shift, and go to state 1
    DOUBLE     shift, and go to state 2
    ENUM       shift, and go to state 3
    FLOAT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    SHORT      shift, and go to state 7
    SIGNED     shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNSIGNED   shift, and go to state 10
    VOID       shift, and go to state 11
    BOOL       shift, and go to state 12
    COMPLEX    shift, and go to state 13
    IMAGINARY  shift, and go to state 14

    $default  reduce using rule 1 (program)

    external_declaration    go to state 25
    function_definition     go to state 18
    declaration_specifiers  go to state 19
    type_specifier          go to state 20
    declaration             go to state 21


State 17

    3 external_declaration_list: external_declaration •

    $default  reduce using rule 3 (external_declaration_list)


State 18

    4 external_declaration: function_definition •

    $default  reduce using rule 4 (external_declaration)


State 19

    6 function_definition: declaration_specifiers • declarator compound_statement
   47 declaration: declaration_specifiers • init_declarator_list SEMICOLON

    STAR  shift, and go to state 26

    $default  reduce using rule 24 (pointer_opt)

    declarator            go to state 27
    pointer_opt           go to state 28
    init_declarator_list  go to state 29
    init_declarator       go to state 30


State 20

    7 declaration_specifiers: type_specifier •
    8                       | type_specifier • declaration_specifiers

    CHAR       shift, and go to state 1
    DOUBLE     shift, and go to state 2
    ENUM       shift, and go to state 3
    FLOAT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    SHORT      shift, and go to state 7
    SIGNED     shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNSIGNED   shift, and go to state 10
    VOID       shift, and go to state 11
    BOOL       shift, and go to state 12
    COMPLEX    shift, and go to state 13
    IMAGINARY  shift, and go to state 14

    $default  reduce using rule 7 (declaration_specifiers)

    declaration_specifiers  go to state 31
    type_specifier          go to state 20


State 21

    5 external_declaration: declaration •

    $default  reduce using rule 5 (external_declaration)


State 22

   22 type_specifier: ENUM IDENTIFIER •

    $default  reduce using rule 22 (type_specifier)


State 23

   21 type_specifier: STRUCT IDENTIFIER •

    $default  reduce using rule 21 (type_specifier)


State 24

    0 $accept: program $end •

    $default  accept


State 25

    2 external_declaration_list: external_declaration_list external_declaration •

    $default  reduce using rule 2 (external_declaration_list)


State 26

   25 pointer_opt: STAR • pointer_opt

    STAR  shift, and go to state 26

    $default  reduce using rule 24 (pointer_opt)

    pointer_opt  go to state 32


State 27

    6 function_definition: declaration_specifiers declarator • compound_statement
   50 init_declarator: declarator •
   51                | declarator • ASSIGN initializer

    LBRACE  shift, and go to state 33
    ASSIGN  shift, and go to state 34

    $default  reduce using rule 50 (init_declarator)

    compound_statement  go to state 35


State 28

   23 declarator: pointer_opt • direct_declarator

    IDENTIFIER  shift, and go to state 36
    LPAREN      shift, and go to state 37

    direct_declarator  go to state 38


State 29

   47 declaration: declaration_specifiers init_declarator_list • SEMICOLON
   49 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 39
    COMMA      shift, and go to state 40


State 30

   48 init_declarator_list: init_declarator •

    $default  reduce using rule 48 (init_declarator_list)


State 31

    8 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 8 (declaration_specifiers)


State 32

   25 pointer_opt: STAR pointer_opt •

    $default  reduce using rule 25 (pointer_opt)


State 33

   62 compound_statement: LBRACE • block_item_list RBRACE
   63                   | LBRACE • RBRACE

    BREAK               shift, and go to state 41
    CHAR                shift, and go to state 1
    CONTINUE            shift, and go to state 42
    DO                  shift, and go to state 43
    DOUBLE              shift, and go to state 2
    ENUM                shift, and go to state 3
    FLOAT               shift, and go to state 4
    FOR                 shift, and go to state 44
    GOTO                shift, and go to state 45
    IF                  shift, and go to state 46
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    RETURN              shift, and go to state 47
    SHORT               shift, and go to state 7
    SIGNED              shift, and go to state 8
    SIZEOF              shift, and go to state 48
    STRUCT              shift, and go to state 9
    SWITCH              shift, and go to state 49
    UNSIGNED            shift, and go to state 10
    VOID                shift, and go to state 11
    WHILE               shift, and go to state 50
    BOOL                shift, and go to state 12
    COMPLEX             shift, and go to state 13
    IMAGINARY           shift, and go to state 14
    IDENTIFIER          shift, and go to state 51
    INTEGER_CONSTANT    shift, and go to state 52
    FLOATING_CONSTANT   shift, and go to state 53
    CHARACTER_CONSTANT  shift, and go to state 54
    STRING_LITERAL      shift, and go to state 55
    INC_OP              shift, and go to state 56
    DEC_OP              shift, and go to state 57
    SEMICOLON           shift, and go to state 58
    LBRACE              shift, and go to state 33
    RBRACE              shift, and go to state 59
    LPAREN              shift, and go to state 60
    AMPERSAND           shift, and go to state 61
    EXCLAMATION         shift, and go to state 62
    TILDE               shift, and go to state 63
    MINUS               shift, and go to state 64
    PLUS                shift, and go to state 65
    STAR                shift, and go to state 66

    declaration_specifiers     go to state 67
    type_specifier             go to state 20
    declaration                go to state 68
    statement                  go to state 69
    compound_statement         go to state 70
    block_item_list            go to state 71
    block_item                 go to state 72
    expression_statement       go to state 73
    selection_statement        go to state 74
    iteration_statement        go to state 75
    jump_statement             go to state 76
    expression                 go to state 77
    assignment_expression      go to state 78
    conditional_expression     go to state 79
    logical_or_expression      go to state 80
    logical_and_expression     go to state 81
    inclusive_or_expression    go to state 82
    exclusive_or_expression    go to state 83
    and_expression             go to state 84
    equality_expression        go to state 85
    relational_expression      go to state 86
    shift_expression           go to state 87
    additive_expression        go to state 88
    multiplicative_expression  go to state 89
    cast_expression            go to state 90
    unary_expression           go to state 91
    unary_operator             go to state 92
    postfix_expression         go to state 93
    primary_expression         go to state 94


State 34

   51 init_declarator: declarator ASSIGN • initializer

    SIZEOF              shift, and go to state 48
    IDENTIFIER          shift, and go to state 51
    INTEGER_CONSTANT    shift, and go to state 52
    FLOATING_CONSTANT   shift, and go to state 53
    CHARACTER_CONSTANT  shift, and go to state 54
    STRING_LITERAL      shift, and go to state 55
    INC_OP              shift, and go to state 56
    DEC_OP              shift, and go to state 57
    LBRACE              shift, and go to state 95
    LPAREN              shift, and go to state 60
    AMPERSAND           shift, and go to state 61
    EXCLAMATION         shift, and go to state 62
    TILDE               shift, and go to state 63
    MINUS               shift, and go to state 64
    PLUS                shift, and go to state 65
    STAR                shift, and go to state 66

    initializer                go to state 96
    assignment_expression      go to state 97
    conditional_expression     go to state 79
    logical_or_expression      go to state 80
    logical_and_expression     go to state 81
    inclusive_or_expression    go to state 82
    exclusive_or_expression    go to state 83
    and_expression             go to state 84
    equality_expression        go to state 85
    relational_expression      go to state 86
    shift_expression           go to state 87
    additive_expression        go to state 88
    multiplicative_expression  go to state 89
    cast_expression            go to state 90
    unary_expression           go to state 91
    unary_operator             go to state 92
    postfix_expression         go to state 93
    primary_expression         go to state 94


State 35

    6 function_definition: declaration_specifiers declarator compound_statement •

    $default  reduce using rule 6 (function_definition)


State 36

   26 direct_declarator: IDENTIFIER •

    $default  reduce using rule 26 (direct_declarator)


State 37

   27 direct_declarator: LPAREN • declarator RPAREN

    STAR  shift, and go to state 26

    $default  reduce using rule 24 (pointer_opt)

    declarator   go to state 98
    pointer_opt  go to state 28


State 38

   23 declarator: pointer_opt direct_declarator •
   28 direct_declarator: direct_declarator • LPAREN parameter_type_list RPAREN
   29                  | direct_declarator • LPAREN RPAREN
   30                  | direct_declarator • LBRACKET assignment_expression RBRACKET
   31                  | direct_declarator • LBRACKET RBRACKET

    LPAREN    shift, and go to state 99
    LBRACKET  shift, and go to state 100

    $default  reduce using rule 23 (declarator)


State 39

   47 declaration: declaration_specifiers init_declarator_list SEMICOLON •

    $default  reduce using rule 47 (declaration)


State 40

   49 init_declarator_list: init_declarator_list COMMA • init_declarator

    STAR  shift, and go to state 26

    $default  reduce using rule 24 (pointer_opt)

    declarator       go to state 101
    pointer_opt      go to state 28
    init_declarator  go to state 102


State 41

   79 jump_statement: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 103


State 42

   78 jump_statement: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 104


State 43

   74 iteration_statement: DO • statement WHILE LPAREN expression RPAREN SEMICOLON

    BREAK               shift, and go to state 41
    CONTINUE            shift, and go to state 42
    DO                  shift, and go to state 43
    FOR                 shift, and go to state 44
    GOTO                shift, and go to state 45
    IF                  shift, and go to state 46
    RETURN              shift, and go to state 47
    SIZEOF              shift, and go to state 48
    SWITCH              shift, and go to state 49
    WHILE               shift, and go to state 50
    IDENTIFIER          shift, and go to state 51
    INTEGER_CONSTANT    shift, and go to state 52
    FLOATING_CONSTANT   shift, and go to state 53
    CHARACTER_CONSTANT  shift, and go to state 54
    STRING_LITERAL      shift, and go to state 55
    INC_OP              shift, and go to state 56
    DEC_OP              shift, and go to state 57
    SEMICOLON           shift, and go to state 58
    LBRACE              shift, and go to state 33
    LPAREN              shift, and go to state 60
    AMPERSAND           shift, and go to state 61
    EXCLAMATION         shift, and go to state 62
    TILDE               shift, and go to state 63
    MINUS               shift, and go to state 64
    PLUS                shift, and go to state 65
    STAR                shift, and go to state 66

    statement                  go to state 105
    compound_statement         go to state 70
    expression_statement       go to state 73
    selection_statement        go to state 74
    iteration_statement        go to state 75
    jump_statement             go to state 76
    expression                 go to state 77
    assignment_expression      go to state 78
    conditional_expression     go to state 79
    logical_or_expression      go to state 80
    logical_and_expression     go to state 81
    inclusive_or_expression    go to state 82
    exclusive_or_expression    go to state 83
    and_expression             go to state 84
    equality_expression        go to state 85
    relational_expression      go to state 86
    shift_expression           go to state 87
    additive_expression        go to state 88
    multiplicative_expression  go to state 89
    cast_expression            go to state 90
    unary_expression           go to state 91
    unary_operator             go to state 92
    postfix_expression         go to state 93
    primary_expression         go to state 94


State 44

   75 iteration_statement: FOR • LPAREN expression_statement expression_statement RPAREN statement
   76                    | FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 106


State 45

   77 jump_statement: GOTO • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 107


State 46

   70 selection_statement: IF • LPAREN expression RPAREN statement
   71                    | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 108


State 47

   80 jump_statement: RETURN • expression SEMICOLON
   81               | RETURN • SEMICOLON

    SIZEOF              shift, and go to state 48
    IDENTIFIER          shift, and go to state 51
    INTEGER_CONSTANT    shift, and go to state 52
    FLOATING_CONSTANT   shift, and go to state 53
    CHARACTER_CONSTANT  shift, and go to state 54
    STRING_LITERAL      shift, and go to state 55
    INC_OP              shift, and go to state 56
    DEC_OP              shift, and go to state 57
    SEMICOLON           shift, and go to state 109
    LPAREN              shift, and go to state 60
    AMPERSAND           shift, and go to state 61
    EXCLAMATION         shift, and go to state 62
    TILDE               shift, and go to state 63
    MINUS               shift, and go to state 64
    PLUS                shift, and go to state 65
    STAR                shift, and go to state 66

    expression                 go to state 110
    assignment_expression      go to state 78
    conditional_expression     go to state 79
    logical_or_expression      go to state 80
    logical_and_expression     go to state 81
    inclusive_or_expression    go to state 82
    exclusive_or_expression    go to state 83
    and_expression             go to state 84
    equality_expression        go to state 85
    relational_expression      go to state 86
    shift_expression           go to state 87
    additive_expression        go to state 88
    multiplicative_expression  go to state 89
    cast_expression            go to state 90
    unary_expression           go to state 91
    unary_operator             go to state 92
    postfix_expression         go to state 93
    primary_expression         go to state 94


State 48

  133 unary_expression: SIZEOF • unary_expression
  134                 | SIZEOF • LPAREN type_name RPAREN

    SIZEOF              shift, and go to state 48
    IDENTIFIER          shift, and go to state 51
    INTEGER_CONSTANT    shift, and go to state 52
    FLOATING_CONSTANT   shift, and go to state 53
    CHARACTER_CONSTANT  shift, and go to state 54
    STRING_LITERAL      shift, and go to state 55
    INC_OP              shift, and go to state 56
    DEC_OP              shift, and go to state 57
    LPAREN              shift, and go to state 111
    AMPERSAND           shift, and go to state 61
    EXCLAMATION         shift, and go to state 62
    TILDE               shift, and go to state 63
    MINUS               shift, and go to state 64
    PLUS                shift, and go to state 65
    STAR                shift, and go to state 66

    unary_expression    go to state 112
    unary_operator      go to state 92
    postfix_expression  go to state 93
    primary_expression  go to state 94


State 49

   72 selection_statement: SWITCH • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 113


State 50

   73 iteration_statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 114


State 51

  149 primary_expression: IDENTIFIER •

    $default  reduce using rule 149 (primary_expression)


State 52

  150 primary_expression: INTEGER_CONSTANT •

    $default  reduce using rule 150 (primary_expression)


State 53

  151 primary_expression: FLOATING_CONSTANT •

    $default  reduce using rule 151 (primary_expression)


State 54

  152 primary_expression: CHARACTER_CONSTANT •

    $default  reduce using rule 152 (primary_expression)


State 55

  153 primary_expression: STRING_LITERAL •

    $default  reduce using rule 153 (primary_expression)


State 56

  130 unary_expression: INC_OP • unary_expression

    SIZEOF              shift, and go to state 48
    IDENTIFIER          shift, and go to state 51
    INTEGER_CONSTANT    shift, and go to state 52
    FLOATING_CONSTANT   shift, and go to state 53
    CHARACTER_CONSTANT  shift, and go to state 54
    STRING_LITERAL      shift, and go to state 55
    INC_OP              shift, and go to state 56
    DEC_OP              shift, and go to state 57
    LPAREN              shift, and go to state 115
    AMPERSAND           shift, and go to state 61
    EXCLAMATION         shift, and go to state 62
    TILDE               shift, and go to state 63
    MINUS               shift, and go to state 64
    PLUS                shift, and go to state 65
    STAR                shift, and go to state 66

    unary_expression    go to state 116
    unary_operator      go to state 92
    postfix_expression  go to state 93
    primary_expression  go to state 94


State 57

  131 unary_expression: DEC_OP • unary_expression

    SIZEOF              shift, and go to state 48
    IDENTIFIER          shift, and go to state 51
    INTEGER_CONSTANT    shift, and go to state 52
    FLOATING_CONSTANT   shift, and go to state 53
    CHARACTER_CONSTANT  shift, and go to state 54
    STRING_LITERAL      shift, and go to state 55
    INC_OP              shift, and go to state 56
    DEC_OP              shift, and go to state 57
    LPAREN              shift, and go to state 115
    AMPERSAND           shift, and go to state 61
    EXCLAMATION         shift, and go to state 62
    TILDE               shift, and go to state 63
    MINUS               shift, and go to state 64
    PLUS                shift, and go to state 65
    STAR                shift, and go to state 66

    unary_expression    go to state 117
    unary_operator      go to state 92
    postfix_expression  go to state 93
    primary_expression  go to state 94


State 58

   69 expression_statement: SEMICOLON •

    $default  reduce using rule 69 (expression_statement)


State 59

   63 compound_statement: LBRACE RBRACE •

    $default  reduce using rule 63 (compound_statement)


State 60

  128 cast_expression: LPAREN • type_name RPAREN cast_expression
  154 primary_expression: LPAREN • expression RPAREN
